--- a/RKI.Rmd
+++ b/RKI.Rmd
@@ -81,12 +81,12 @@ Erklärung (siehe [Technical Report]() für eine detaillierte Beschreibung):
 - Wir schätzen die **Reproduktionsrate**  *R(t)* am Tag *t*, d. h. die durchschnittliche Anzahl von Menschen die jemand, der am Tag *t* infiziert wurde, infizieren würde, wenn die Bedingungen gleich bleiben würden.
 - Der Schätzer wurde aus [(Fraser 2007)](#ref1) entnommen. Er vergleicht die Anzahl der Infektionen zu einem Zeitpunkt mit der Anzahl der infektiösen Fälle zu dieser Zeit gewichtet mit ihrer Infektivität.
 - Für den Schätzer wurden (approximative, punktweise) **95% Konfidenzintervalle**, mit Hilfe der Delta-Methode, berechnet.
-- **Warnung:** die Größe der Konfidenzintervalle spiegelt nur die statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie bedingt ist. Die obigen Schätzungen sollten vorsichtig interpretiert werden, da der Schätzer auf bestimmten Annahmen über die Infektivität des Virus basiert, zudem muss die Ungenauigkeit der zugrundeliegenden Daten beachtet werden, welche durch den Meldeablauf, die Anzahl der durchgeführten Tests etc. Speziell bei den RKI Daten wird das durch einen ausgeprägten Wochentagseffekt deutlich. Dennoch glauben wir daran, dass sich qualitative Aussagen ableiten lassen.
+- **Warnung:** die Größe der Konfidenzintervalle spiegelt nur die statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie bedingt ist. Die obigen Schätzungen sollten vorsichtig interpretiert werden, da der Schätzer auf bestimmten Annahmen über die Infektivität des Virus basiert, zudem muss die Ungenauigkeit der zugrundeliegenden Daten beachtet werden, welche durch den Meldeablauf, die Anzahl der durchgeführten Tests etc. hinzu kommt. Speziell bei den RKI Daten wird das durch einen ausgeprägten Wochentagseffekt deutlich. Dennoch glauben wir daran, dass sich qualitative Aussagen ableiten lassen.
 - Der Code steht [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) zur Verfügung.
-- Der Schätzer wird in Schwarz angezeigt, Konfidenzbereiche als graue Streifen, wobei die Werte der (logarithmischen) Skala der linken Achse entsprechen.
-- Der **kritische Wert** für die Reproduktionsrate ist **1**, angezeigt als horizontale Linie: ein Wert größer als Eins würde in einem exponentiellen Anstieg der Infektionen resultieren, ein kleinerer als Eins zu einem Abfallen.
-- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen passend zur (linearen) Skala der rechten Achse. Die [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](rki.de).
-- Die Grafiken werden Täglich<!-- at 2:00 GMT--> aktualisiert und zeigen den Datenstand bis gestern 
+- Der Schätzer wird in Schwarz angezeigt, Konfidenzbereiche als graue Streifen, wobei die Werte der (logarithmischen) Skala auf der linken Achse entsprechen.
+- Der **kritische Wert** für die Reproduktionsrate ist **1**, angezeigt als horizontale Linie: ein Wert größer als Eins würde in einem exponentiellen Anstieg der Infektionen resultieren, einer kleiner als Eins zu einem Abfallen.
+- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen passend zur (linearen) Skala auf der rechten Achse. Die [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](https://www.rki.de).
+- Die Grafiken werden Täglich<!-- at 2:00 GMT--> aktualisiert und zeigen den Datenstand bis gestern.
 - Zu beachten ist weiterhin, dass das Meldedatum der Fälle wesentlich später ist als das tatsächliche Infektionsdatum (Inkubationszeit, Durchführung der Tests und Meldung an die Behörden). Der Einfachheit halber gehen wir hier von einer Meldeverzögerung von 7 Tagen nach Infektion aus. Deswegen wird auch die Schätzung der Reproduktionsrate zeitversetzt zu den gemeldeten Fällen angezeigt!
 - In einer Population in der keine Gegenmaßnahmen unternommen werden, wird die Reproduktionsrate des Coronavirus auf 2,4 bis 3,3 geschätzt. Schätzungen mit höheren Werten könnten dadurch erklärt werden, dass für eine bestimmte Region zu Beginn die meisten Fälle von außerhalb importiert wurden.
 
