--- a/RKI.Rmd
+++ b/RKI.Rmd
@@ -1,7 +1,22 @@
 ---
-title: 'Schätzer für Deutschland basierend auf RKI Daten'
+title: 'Überwachung der Ausbreitung von COVID-19 durch Schätzen der Reproduktionszahl im Verlauf der Zeit'
 output: html_document
 ---
+
+Erstellt von
+[Prof. Dr. Thomas Hotz](https://www.tu-ilmenau.de/stochastik/team/thomas-hotz/),
+[Stefan Heyder](https://www.tu-ilmenau.de/stochastik/team/stefan-heyder/),
+[Matthias Glock](https://www.tu-ilmenau.de/stochastik/team/matthias-glock/)
+und [Sebastian Semper](https://www.tu-ilmenau.de/stochastik/team/sebastian-semper/)
+der
+*[AG Stochastik](https://www.tu-ilmenau.de/stochastik/), [Technische Universität Ilmenau](https://www.tu-ilmenau.de/)*
+<br/>
+in Zusammenarbeit mit
+[Prof. Dr. Alexander Krämer](https://ekvv.uni-bielefeld.de/pers_publ/publ/PersonDetail.jsp?personId=21463&lang=de)
+und
+[Anne Böhle](anne.boehle@uni-bielefeld.de)
+der
+*[Fakultät für Gesundheitswissenschaften](https://www.uni-bielefeld.de/gesundhw/index.html), [Universität Bielefeld](https://www.uni-bielefeld.de/)*.
 
 ```{r libraries, echo = F, message = F, warning = F, results='hide'}
 library(lubridate, warn.conflicts = F)
@@ -21,8 +36,6 @@ ger_tot <- read.csv("data/clean/data_ger_tot.csv")
 ```
 
 ## {.tabset .tabset-fade}
-
-[zurück](index.html)
 
 <!--
 See https://github.com/rstudio/flexdashboard/issues/80#issuecomment-247139450
@@ -51,7 +64,7 @@ plots <- lapply(regions, function(country_name) {
             conf.level = 1 - alpha,
             pad.zeros = TRUE
         ))
-    
+
     plot_repronum(estimates, country_name, language = "de")
 })
 
@@ -69,22 +82,24 @@ out <- lapply(seq_along(plots), function(i) {
 
 ##
 
-Erklärung (siehe [Technical Report]() für eine detaillierte Beschreibung):
+Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundesländer finden sich auf den [englisch-sprachigen Seiten](index.html) solche für die [Welt und die 20 am stärksten betroffen Länder](index.html) sowie für [alle verfügbaren Länder](all.html)
 
-- Wir schätzen die **Reproduktionsrate**  *R(t)* am Tag *t*, d. h. die durchschnittliche Anzahl von Menschen die jemand, der am Tag *t* infiziert wurde, infizieren würde, wenn die Bedingungen gleich bleiben würden.
-- Der Schätzer wurde aus [(Fraser 2007)](#ref1) entnommen. Er vergleicht die Anzahl der Infektionen zu einem Zeitpunkt mit der Anzahl der infektiösen Fälle zu dieser Zeit gewichtet mit ihrer Infektivität.
-- Für den Schätzer wurden (approximative, punktweise) **95% Konfidenzintervalle**, mit Hilfe der Delta-Methode, berechnet.
-- **Warnung:** die Größe der Konfidenzintervalle spiegelt nur die statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie bedingt ist. Die obigen Schätzungen sollten vorsichtig interpretiert werden, da der Schätzer auf bestimmten Annahmen über die Infektivität des Virus basiert, zudem muss die Ungenauigkeit der zugrundeliegenden Daten beachtet werden, welche durch den Meldeablauf, die Anzahl der durchgeführten Tests etc. hinzu kommt. Speziell bei den RKI Daten wird das durch einen ausgeprägten Wochentagseffekt deutlich. Dennoch glauben wir daran, dass sich qualitative Aussagen ableiten lassen.
-- Der Code steht [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) zur Verfügung.
-- Der Schätzer wird in Schwarz angezeigt, Konfidenzbereiche als graue Streifen, wobei die Werte der (logarithmischen) Skala auf der linken Achse entsprechen.
-- Der **kritische Wert** für die Reproduktionsrate ist **1**, angezeigt als horizontale Linie: ein Wert größer als Eins würde in einem exponentiellen Anstieg der Infektionen resultieren, einer kleiner als Eins zu einem Abfallen.
-- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen passend zur (linearen) Skala auf der rechten Achse. Die [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](https://www.rki.de).
-- Die Grafiken werden Täglich<!-- at 2:00 GMT--> aktualisiert und zeigen den Datenstand bis gestern.
-- Zu beachten ist weiterhin, dass das Meldedatum der Fälle wesentlich später ist als das tatsächliche Infektionsdatum (Inkubationszeit, Durchführung der Tests und Meldung an die Behörden). Der Einfachheit halber gehen wir hier von einer Meldeverzögerung von 7 Tagen nach Infektion aus. Deswegen wird auch die Schätzung der Reproduktionsrate zeitversetzt zu den gemeldeten Fällen angezeigt!
-- In einer Population in der keine Gegenmaßnahmen unternommen werden, wird die Reproduktionsrate des Coronavirus auf 2,4 bis 3,3 geschätzt. Schätzungen mit höheren Werten könnten dadurch erklärt werden, dass für eine bestimmte Region zu Beginn die meisten Fälle von außerhalb importiert wurden.
+### Notes
 
+- Geschätzt wird die (Netto-)**Reproduktionsrate**  *R(t)* am Tag *t*, das heißt die durchschnittliche Anzahl von Menschen die jemand, der am Tag *t* infiziert wurde, unter gleichbleibenden Bedingungen infizieren würde.
+- Der Schätzer wurde [(Fraser 2007)](#ref1) entnommen. Er beruht auf einem Vergleich der Anzahl der Infektionen zum fraglichen Zeitpunkt mit der Anzahl der infektiösen Fälle zu dieser Zeit, gewichtet mit ihrer jeweiligen Infektivität. Man beachte, dass im Verhältnis zu den gemeldeten Fällen konstant bleibende Dunkelziffer die Schätzungen nicht verändert, da sie sich mit dem selben Proportionalitätsfaktor sowohl auf die Zahl der Infizierten als auch der Infektiösen auswirken würde.
+- Für den Schätzer wurden mit Hilfe der Delta-Methode (approximative, punktweise) **95%-Konfidenzintervalle** hergeleitet.
+- Allerdings spiegelt die Größe der Konfidenzintervalle nur diejenige statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie entsteht. Da der Schätzer jedoch auf gewissen Annahmen über die Infektivität des Virus basiert und darüberhinaus die zugrundeliegenden Daten aufgrund von sich ändernden Meldekriterien, der Anzahl durchgeführter Tests etc. nicht zu vernachlässigende Unzulänglichkeiten ausfweisen hinzu **sollten die Schätzungen vorsichtig interpretiert werden**. Beispielsweise wirken sich bei den hier verwendeten Daten Wochenendeffekte stark auf das Meldedatum aus, was sich wiederum auf die Schätzungen auswirkt. Dennoch glauben wir, dass sich aus den Schätzungen qualitativ richtige Erkenntnisse ableiten lassen.
+- Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (logarithmischen) Skala der linken Achse abgetragen werden.
+- Der **kritische Wert** für die Reproduktionsrate ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
+- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der rechten Achse. Die zu Grunde liegenden [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](https://www.rki.de).
+- Die Grafiken werden täglich aktualisiert (zuletzt: `r format(Sys.time(), '%d.%m.%Y, %H:%M', tz = "Europe/Berlin")`) und zeigen den Datenstand bis gestern.
+- Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionsrate **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
+- Aufgrund der Meldekette vom Gesundheitsamt des Landkreises über die zuständige Landesbehörde ans Robert-Koch-Institut, werden Daten nachgetragen, für die letzten 3 Tage in nicht zu vernachlässigendem Umfang. Deshalb sind die jeweils **letzten 3 Werte noch nicht vollständig** und werden entsprechend blasser dargestellt.
+- In einer Population, in der keine Gegenmaßnahmen unternommen werden, wird die sogenannte **Basisreproduktionszahl** auf einen Wert zwischen 2,4 und 4,1 geschätzt [(Read et al. 2020)](#ref2). Schätzungen mit höheren Werten könnten durch eine beträchtliche Zahl von außen **eingeschleppter Fälle** erklärt werden.
+-  **Details** findet man im zugehörigen [Bericht](reports/repronum/repronum.pdf) (auf Englisch); der **Code** ist [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) verfügbar.
 
-### Referenzen ###
+### Referenzen
 
-<a name="ref1">[1]</a>: Fraser, C. (2007). *Estimating Individual and Household Reproduction
-Numbers in an Emerging Epidemic.* PLOS ONE 2 (8), [https://doi.org/10.1371/journal.pone.0000758](https://doi.org/10.1371/journal.pone.0000758).
+<a name="ref1">[1]</a>: Fraser, C. (2007). *Estimating Individual and Household Reproduction Numbers in an Emerging Epidemic.* PLOS ONE 2 (8), [https://doi.org/10.1371/journal.pone.0000758](https://doi.org/10.1371/journal.pone.0000758).
+<a name="ref2">[2]</a>: Read, J.M., Bridgen, J.R.E., Cummings, D.A.T., Ho, A., Jewell, C.P. (2020) *Novel coronavirus 2019-nCoV: early estimation of epidemiological parameters and epidemic predictions.* MedRxiv, Version 2, 01/28/2020, [https://doi.org/10.1101/2020.01.23.20018549](https://doi.org/10.1101/2020.01.23.20018549).
