Added to german text.

--- a/germany.Rmd
+++ b/germany.Rmd
@@ -93,6 +93,7 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 - Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (logarithmischen) Skala der linken Achse abgetragen werden.
 - Der **kritische Wert** für die Reproduktionsrate ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
 - Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der rechten Achse. Die zu Grunde liegenden [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](https://www.rki.de).
+- Für die geschätzten Reproduktionszahlen (Linien, linke vertikale Achse) bezieht sich die horizontale Achse auf das zugehörige Infektionsdatum, während sie sich für die neu gemeldeten Fälle (Säulen, rechte vertikale Achse) auf das Meldedatum bezieht. Montage wurden beschriftet.
 - Die Grafiken werden täglich aktualisiert (zuletzt: `r format(Sys.time(), '%d.%m.%Y, %H:%M', tz = "Europe/Berlin")`) und zeigen den Datenstand bis gestern.
 - Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionsrate **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
 - Aufgrund der Meldekette vom Gesundheitsamt des Landkreises über die zuständige Landesbehörde ans Robert-Koch-Institut, werden Daten nachgetragen, für die letzten 3 Tage in nicht zu vernachlässigendem Umfang. Deshalb sind die jeweils **letzten 3 Werte noch nicht vollständig** und werden entsprechend blasser dargestellt.
