--- a/germany.Rmd
+++ b/germany.Rmd
@@ -86,16 +86,16 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 
 ### Notes
 
-- Geschätzt wird die (Netto-)**Reproduktionsrate**  *R(t)* am Tag *t*, das heißt die durchschnittliche Anzahl von Menschen die jemand, der am Tag *t* infiziert wurde, unter gleichbleibenden Bedingungen infizieren würde.
+- Geschätzt wird die (Netto-)**Reproduktionszahl**  *R(t)* am Tag *t*, das heißt die durchschnittliche Anzahl von Menschen die jemand, der am Tag *t* infiziert wurde, unter gleichbleibenden Bedingungen infizieren würde.
 - Der Schätzer wurde [(Fraser 2007)](#ref1) entnommen. Er beruht auf einem Vergleich der Anzahl der Infektionen zum fraglichen Zeitpunkt mit der Anzahl der infektiösen Fälle zu dieser Zeit, gewichtet mit ihrer jeweiligen Infektivität. Man beachte, dass im Verhältnis zu den gemeldeten Fällen konstant bleibende Dunkelziffer die Schätzungen nicht verändert, da sie sich mit dem selben Proportionalitätsfaktor sowohl auf die Zahl der Infizierten als auch der Infektiösen auswirken würde.
 - Für den Schätzer wurden mit Hilfe der Delta-Methode (approximative, punktweise) **95%-Konfidenzintervalle** hergeleitet.
 - Allerdings spiegelt die Größe der Konfidenzintervalle nur diejenige statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie entsteht. Da der Schätzer jedoch auf gewissen Annahmen über die Infektivität des Virus basiert und darüberhinaus die zugrundeliegenden Daten aufgrund von sich ändernden Meldekriterien, der Anzahl durchgeführter Tests etc. nicht zu vernachlässigende Unzulänglichkeiten ausfweisen hinzu **sollten die Schätzungen vorsichtig interpretiert werden**. Beispielsweise wirken sich bei den hier verwendeten Daten Wochenendeffekte stark auf das Meldedatum aus, was sich wiederum auf die Schätzungen auswirkt. Dennoch glauben wir, dass sich aus den Schätzungen qualitativ richtige Erkenntnisse ableiten lassen.
 - Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (logarithmischen) Skala der linken Achse abgetragen werden.
-- Der **kritische Wert** für die Reproduktionsrate ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
+- Der **kritische Wert** für die Reproduktionszahl ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
 - Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der rechten Achse. Die zu Grunde liegenden [Daten](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0) stammen vom [Robert Koch-Institut](https://www.rki.de).
 - Für die geschätzten Reproduktionszahlen (Linien, linke vertikale Achse) bezieht sich die horizontale Achse auf das zugehörige Infektionsdatum, während sie sich für die neu gemeldeten Fälle (Säulen, rechte vertikale Achse) auf das Meldedatum bezieht. Montage wurden beschriftet.
 - Die Grafiken werden täglich aktualisiert (zuletzt: `r format(Sys.time(), '%d.%m.%Y, %H:%M', tz = "Europe/Berlin")`) und zeigen den Datenstand bis gestern.
-- Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionsrate **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
+- Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionszahl **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
 - Aufgrund der Meldekette vom Gesundheitsamt des Landkreises über die zuständige Landesbehörde ans Robert-Koch-Institut, werden Daten nachgetragen, für die letzten 3 Tage in nicht zu vernachlässigendem Umfang. Deshalb sind die jeweils **letzten 3 Werte noch nicht vollständig** und werden entsprechend blasser dargestellt.
 - In einer Population, in der keine Gegenmaßnahmen unternommen werden, wird die sogenannte **Basisreproduktionszahl** auf einen Wert zwischen 2,4 und 4,1 geschätzt [(Read et al. 2020)](#ref2). Schätzungen mit höheren Werten könnten durch eine beträchtliche Zahl von außen **eingeschleppter Fälle** erklärt werden.
 -  **Details** findet man im zugehörigen [Bericht](reports/repronum/repronum.pdf) (auf Englisch); der **Code** ist [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) verfügbar.
