--- a/all.Rmd
+++ b/all.Rmd
@@ -76,7 +76,7 @@ out <- lapply(seq_along(plots), function(i) {
 
 ##
 
-Above, we show results for all countries with at least `r mincases` cases `r report.delay` days ago; results for the world as well as the 20 most affected countries may be found [here](index.html). In addition, results for Germany and its Bundesländer are available [here](germany.html) (in German).
+We show results for all countries with at least `r mincases` cases `r report.delay` days ago. Results for the world and for the 20 most affected countries can be found [here](index.html). In addition, results for Germany and its federal states (Bundesländer) based on official data are available [here](germany.html) (in German).
 
 ```{r echo=FALSE, results="asis"}
 cat(paste(
