--- a/germany.Rmd
+++ b/germany.Rmd
@@ -82,7 +82,7 @@ out <- lapply(seq_along(plots), function(i) {
 
 ##
 
-Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundesländer finden sich auf den [englisch-sprachigen Seiten](index.html) solche für die [Welt und die 20 am stärksten betroffen Länder](index.html) sowie für [alle verfügbaren Länder](all.html)
+Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundesländer finden sich auf den [englisch-sprachigen Seiten](index.html) solche für die [Welt und die 20 am stärksten betroffen Länder](index.html) sowie für [alle verfügbaren Länder](all.html).
 
 ### Notes
 
@@ -93,15 +93,16 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 - Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (logarithmischen) Skala der linken Achse abgetragen werden.
 - Der **kritische Wert** für die Reproduktionsrate ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
 - Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der rechten Achse. Die zu Grunde liegenden [Daten](#ref2) stammen vom [Robert Koch-Institut](https://www.rki.de).
-- Für die geschätzten Reproduktionszahlen (Linien, linke vertikale Achse) bezieht sich die horizontale Achse auf das zugehörige Infektionsdatum, während sie sich für die neu gemeldeten Fälle (Säulen, rechte vertikale Achse) auf das Meldedatum bezieht. Montage wurden beschriftet.
+- Für die geschätzten Reproduktionszahlen (schwarze Linie, linke vertikale Achse) bezieht sich die horizontale Achse auf das zugehörige Infektionsdatum, während sie sich für die neu gemeldeten Fälle (blaue Säulen, rechte vertikale Achse) auf das Meldedatum bezieht. Montage sind durch dünne vertikale Linien gekennzeichnet.
 - Die Grafiken werden täglich aktualisiert (zuletzt: `r format(Sys.time(), '%d.%m.%Y, %H:%M', tz = "Europe/Berlin")`) und zeigen den Datenstand bis gestern.
-- Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionsrate **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
+- Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit (ca. 5 Tage [(WHO 2020)](#ref3)) und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionsrate **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
 - Aufgrund der Meldekette vom Gesundheitsamt des Landkreises über die zuständige Landesbehörde ans Robert-Koch-Institut, werden Daten nachgetragen, für die letzten 3 Tage in nicht zu vernachlässigendem Umfang. Deshalb sind die jeweils **letzten 3 Werte noch nicht vollständig** und werden entsprechend blasser dargestellt.
-- In einer Population, in der keine Gegenmaßnahmen unternommen werden, wird die sogenannte **Basisreproduktionszahl** *R<sub>0</sub>* auf einen Wert zwischen 2,4 und 4,1 geschätzt [(Read et al. 2020)](#ref3). Schätzungen mit höheren Werten könnten durch eine beträchtliche Zahl von außen **eingeschleppter Fälle** erklärt werden.
+- In einer Population, in der keine Gegenmaßnahmen unternommen werden, wird die sogenannte **Basisreproduktionszahl** *R<sub>0</sub>* auf einen Wert zwischen 2,4 und 4,1 geschätzt [(Read et al. 2020)](#ref4). Schätzungen mit höheren Werten könnten durch eine beträchtliche Zahl von außen **eingeschleppter Fälle** erklärt werden.
 -  **Details** findet man im zugehörigen [Bericht](reports/repronum/repronum.pdf) (auf Englisch); der **Code** ist [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) verfügbar.
 
 ### Referenzen
 
 <a name="ref1">[1]</a>: Fraser, C. (2007). *Estimating Individual and Household Reproduction Numbers in an Emerging Epidemic.* PLOS ONE 2 (8), [https://doi.org/10.1371/journal.pone.0000758](https://doi.org/10.1371/journal.pone.0000758).
-<a name="ref1">[2]</a>: Robert Koch-Institut (RKI), dl-de/by-2-0, [URL](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).
-<a name="ref2">[3]</a>: Read, J.M., Bridgen, J.R.E., Cummings, D.A.T., Ho, A., Jewell, C.P. (2020) *Novel coronavirus 2019-nCoV: early estimation of epidemiological parameters and epidemic predictions.* MedRxiv, Version 2, 01/28/2020, [https://doi.org/10.1101/2020.01.23.20018549](https://doi.org/10.1101/2020.01.23.20018549).
+<a name="ref2">[2]</a>: Robert Koch-Institut (RKI), dl-de/by-2-0, [URL](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0).
+<a name="ref3">[3]</a> WHO (2020). Report of the WHO-China Joint Mission on Coronavirus Disease 2019 (COVID-19), [https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)](https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)).
+<a name="ref4">[4]</a>: Read, J.M., Bridgen, J.R.E., Cummings, D.A.T., Ho, A., Jewell, C.P. (2020) *Novel coronavirus 2019-nCoV: early estimation of epidemiological parameters and epidemic predictions.* MedRxiv, Version 2, 01/28/2020, [https://doi.org/10.1101/2020.01.23.20018549](https://doi.org/10.1101/2020.01.23.20018549).
