--- a/reports/corona.bib
+++ b/reports/corona.bib
@@ -1,3 +1,10 @@
+@misc{abbott2020,
+    year = {2020},
+    title = {Temporal variation in transmission during the COVID-19 outbreak},
+    author = {Abbott, Sam and Hellewell, Joel and Munday, James D. and Chun, June Young and Thompson, Robin N. and Bosse, Nikos I. and Chan, Yung-Wai Desmond and Russell, Timothy W. and Jarvis, Christopher I. and {CMMID nCov working group} and Flasche, Stefan and Kucharski, Adam J. and Eggo, Rosalind and Funk, Sebastian},
+    note = {\url{https://cmmid.github.io/topics/covid19/current-patterns-transmission/global-time-varying-transmission.html}}
+}
+
 @article{cori2013,
     author = {Cori, Anne and Ferguson, Neil M. and Fraser, Christophe and Cauchemez, Simon},
     title = "{A New Framework and Software to Estimate Time-Varying Reproduction Numbers During Epidemics}",
@@ -8,7 +15,7 @@
     year = {2013},
     month = {09},
     doi = {10.1093/aje/kwt133},
-    url = {https://doi.org/10.1093/aje/kwt133}
+    note = {\url{https://doi.org/10.1093/aje/kwt133}}
 }
 
 @article{fraser2007,
@@ -19,8 +26,34 @@
     year = {2007},
     month = {08},
     volume = {2},
-    url = {https://doi.org/10.1371/journal.pone.0000758},
+    note = {\url{https://doi.org/10.1371/journal.pone.0000758}},
     pages = {1--12},
     number = {8},
     doi = {10.1371/journal.pone.0000758}
+}
+
+@article {grassly2006,
+	author = {Grassly, Nicholas C. and Fraser, Christophe and Wenger, Jay and Deshpande, Jagadish M. and Sutter, Roland W. and Heymann, David L. and Aylward, R. Bruce},
+	title = {New Strategies for the Elimination of Polio from India},
+	volume = {314},
+	number = {5802},
+	pages = {1150--1153},
+	year = {2006},
+	doi = {10.1126/science.1130388},
+	note = {\url{https://science.sciencemag.org/content/314/5802/1150}},
+	journal = {Science}
+}
+
+@misc{jhu,
+    year = {2020},
+    title = {2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE},
+    author = {{Johns Hopkins University Center for Systems Science and Engineering}},
+    note = {\url{https://github.com/CSSEGISandData/COVID-19}}
+}
+
+@misc{rki,
+    year = {2020},
+    title = {RKI COVID19},
+    author = {{Robert Koch-Institut}}, 
+    note ={dl-de/by-2-0, \url{https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0}}
 }
