--- a/reports/corona.bib
+++ b/reports/corona.bib
@@ -1,6 +1,6 @@
 @misc{abbott2020,
     year = {2020},
-    title = {Temporal variation in transmission during the COVID-19 outbreak},
+    title = {Temporal variation in transmission during the {COVID-19} outbreak},
     author = {Abbott, Sam and Hellewell, Joel and Munday, James D. and Chun, June Young and Thompson, Robin N. and Bosse, Nikos I. and Chan, Yung-Wai Desmond and Russell, Timothy W. and Jarvis, Christopher I. and {CMMID nCov working group} and Flasche, Stefan and Kucharski, Adam J. and Eggo, Rosalind and Funk, Sebastian},
     note = {\url{https://cmmid.github.io/topics/covid19/current-patterns-transmission/global-time-varying-transmission.html}}
 }
@@ -34,7 +34,7 @@
 
 @article {grassly2006,
 	author = {Grassly, Nicholas C. and Fraser, Christophe and Wenger, Jay and Deshpande, Jagadish M. and Sutter, Roland W. and Heymann, David L. and Aylward, R. Bruce},
-	title = {New Strategies for the Elimination of Polio from India},
+	title = {New Strategies for the Elimination of Polio from {India}},
 	volume = {314},
 	number = {5802},
 	pages = {1150--1153},
@@ -46,14 +46,29 @@
 
 @misc{jhu,
     year = {2020},
-    title = {2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE},
+    title = {{2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins CSSE}},
     author = {{Johns Hopkins University Center for Systems Science and Engineering}},
     note = {\url{https://github.com/CSSEGISandData/COVID-19}}
 }
 
+@Misc{Read2020,
+    author = {Read, Jonathan M. and Bridgen, Jessica R.E. and Cummings, Derek A.T. and Ho, Antonia and Jewell, Chris P.},
+    title = {Novel coronavirus {2019-nCoV}: early estimation of epidemiological parameters and epidemic predictions},
+    year = {2020},
+    note = {medRxiv, \url{https://doi.org/10.1101/2020.01.23.20018549}}
+}
+
 @misc{rki,
     year = {2020},
-    title = {RKI COVID19},
+    title = {{RKI COVID19}},
     author = {{Robert Koch-Institut}}, 
     note ={dl-de/by-2-0, \url{https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/dd4580c810204019a7b8eb3e0b329dd6_0}}
 }
+
+@Misc{who2020,
+    author = {World Health Organisation},
+    title = {Report of the {WHO-China Joint Mission} on {Coronavirus Disease 2019 (COVID-19)}},
+    year = {2020},
+    note = {\url{https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)}}
+}
+
