Revert to fig.width for now

--- a/index.Rmd
+++ b/index.Rmd
@@ -73,7 +73,7 @@ out <- lapply(seq_along(plots), function(i) {
   a1 <- knitr::knit_expand(text = sprintf("### %s\n", countries[i]))
 
   # start r chunk
-  a2 <- knitr::knit_expand(text = "\n```{r, echo = F, out.width = '100%'}")
+  a2 <- knitr::knit_expand(text = "\n```{r, echo = F, fig.width = 10}")
 
   # extract graphs by "writing" out `hcs[[1]]`,
   # `hcs[[2]]` etc. to be rendered later
