Corrected mail link for AB.

--- a/all.Rmd
+++ b/all.Rmd
@@ -14,7 +14,7 @@ of the
 in collaboration with
 [Prof. Dr. Alexander Krämer](https://ekvv.uni-bielefeld.de/pers_publ/publ/PersonDetail.jsp?personId=21463&lang=de)
 and
-[Anne Böhle](anne.boehle@uni-bielefeld.de)
+[Anne Böhle](mailto:anne.boehle@uni-bielefeld.de)
 of the
 [School of Public Health](https://www.uni-bielefeld.de/gesundhw/index.html), [Bielefeld University](https://www.uni-bielefeld.de/).
 
