Add explanation for log axis and missing data

--- a/germany.Rmd
+++ b/germany.Rmd
@@ -90,9 +90,9 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 - Der Schätzer wurde [(Fraser 2007)](#ref1) entnommen. Er beruht auf einem Vergleich der Anzahl der Infektionen zum fraglichen Zeitpunkt mit der Anzahl der infektiösen Fälle zu dieser Zeit, gewichtet mit ihrer jeweiligen Infektiosität. Man beachte, dass eine im Verhältnis zu den gemeldeten Fällen konstant bleibende Dunkelziffer die Schätzungen nicht verändert, da sie sich mit demselben Proportionalitätsfaktor sowohl auf die Zahl der Infizierten als auch der Infektiösen auswirken würde.
 - Für den Schätzer wurden mit Hilfe der Delta-Methode (approximative, punktweise) **95%-Konfidenzintervalle** hergeleitet.
 - Allerdings spiegelt die Größe der Konfidenzintervalle nur diejenige statistische Unsicherheit wider, welche durch die zufällige Dynamik der Epidemie entsteht. Da der Schätzer jedoch auf gewissen Annahmen über die Infektiosität des Virus basiert und darüberhinaus die zugrundeliegenden Daten aufgrund von sich ändernden Meldekriterien, der Anzahl durchgeführter Tests etc. nicht zu vernachlässigende Ungenauigkeiten aufweisen, **sollten die Schätzungen vorsichtig interpretiert werden**. Beispielsweise wirken sich bei den hier verwendeten Daten Wochenendeffekte stark auf das Meldedatum aus, was wiederum die Schätzungen beeinflusst. Dennoch glauben wir, dass sich aus den Schätzungen qualitativ richtige Erkenntnisse ableiten lassen.
-- Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (logarithmischen) Skala der linken Achse aufgetragen sind.
+- Die Schätzungen werden als schwarze Linien, die zugehörigen Konfidenzintervalle als graue Streifen dargestellt, wobei die Werte gemäß der (**logarithmischen Skala** der) **linken Achse** aufgetragen sind (daher ist 0 auf der Achse nie sichtbar, sondern entspricht dem unendlich fernen unteren Ende der Achse). 
 - Der **kritische Wert** für die Reproduktionszahl ist **1**, markiert als rote horizontale Linie. Ein größerer Wert als Eins würde zu einem exponentiellen Anstieg der Anzahl an Infektionen führen, ein kleinerer zu einem Abfallen.
-- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der rechten Achse. Die zu Grunde liegenden [Daten](#ref2) stammen vom [Robert Koch-Institut](https://www.rki.de).
+- Die Analyse basiert auf den **neu gemeldeten Fällen** der Coronavirus-Krankheit 2019 (COVID-19) pro Tag, angezeigt als blaue Säulen entsprechend der (linearen) Skala der **rechten Achse**. Die zu Grunde liegenden [Daten](#ref2) stammen vom [Robert Koch-Institut](https://www.rki.de).
 - Für die geschätzten Reproduktionszahlen (schwarze Linie, linke vertikale Achse) bezieht sich die horizontale Achse auf das zugehörige Infektionsdatum, während sie sich für die neu gemeldeten Fälle (blaue Säulen, rechte vertikale Achse) auf das Meldedatum bezieht. Montage sind durch dünne vertikale Linien gekennzeichnet.
 - Die Grafiken werden täglich aktualisiert (zuletzt: `r format(Sys.time(), '%d.%m.%Y, %H:%M', tz = "Europe/Berlin")`) und zeigen den Datenstand bis gestern.
 - Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit (ca. 5 Tage [(WHO 2020)](#ref3)) und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionszahl **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
