--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,8 @@
 ---
 title: 'Monitoring the spread of COVID-19 by estimating reproduction numbers over time'
-output: html_document
+output:
+  html_document:
+    theme: lumen
 ---
 
 Created by
@@ -33,7 +35,7 @@ johns_hopkins <- read.csv("data/clean/data_world_jh.csv")
 world_tot <- read.csv("data/clean/data_world_tot.csv")
 ```
 
-## {.tabset .tabset-fade}
+## {.tabset .tabset-fade .tabset-pills}
 
 <!--
 See https://github.com/rstudio/flexdashboard/issues/80#issuecomment-247139450
