--- a/reports/corona.bib
+++ b/reports/corona.bib
@@ -66,7 +66,7 @@
 }
 
 @Misc{who2020,
-    author = {World Health Organisation},
+    author = {{World Health Organisation}},
     title = {Report of the {WHO-China Joint Mission} on {Coronavirus Disease 2019 (COVID-19)}},
     year = {2020},
     note = {\url{https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)}}
