--- a/reports/corona.bib
+++ b/reports/corona.bib
@@ -51,6 +51,17 @@
     note = {\url{https://github.com/CSSEGISandData/COVID-19}}
 }
 
+@Article{Obadia2012,
+    author = {Obadia, Thomas and Haneef, Romana and Bo\"{e}lle, Pierre-Yves},
+    title = {The {R0} package: a toolbox to estimate reproduction numbers for epidemic outbreaks},
+    year = {2012},
+    journal = {BMC Medical Informatics and Decision Making},
+    volume = {12},
+    number = {147},
+    doi = {10.1186/1472-6947-12-147},
+    note = {\url{https://doi.org/10.1186/1472-6947-12-147}}
+}
+
 @Misc{Read2020,
     author = {Read, Jonathan M. and Bridgen, Jessica R.E. and Cummings, Derek A.T. and Ho, Antonia and Jewell, Chris P.},
     title = {Novel coronavirus {2019-nCoV}: early estimation of epidemiological parameters and epidemic predictions},
